<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/robostick_bg"
    tools:context=".UserManagment.SigninActivity">

    <ScrollView
        android:layout_width="403dp"
        android:layout_height="828dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="454dp"
                    android:layout_height="217dp"
                    android:background="@drawable/login_rectangle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleProfileImageView"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:autofillHints=""
                android:background="@drawable/edittext_round"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/signin_email_username"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:autofillHints=""
                android:background="@drawable/edittext_round"
                android:hint="@string/original_email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/signin_password"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:autofillHints=""
                android:background="@drawable/edittext_round"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/father_name"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:background="@drawable/edittext_round"
                android:hint="@string/father_name"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/signin_phone_number"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:autofillHints=""
                android:background="@drawable/edittext_round"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/school_name"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:autofillHints=""
                android:background="@drawable/edittext_round"
                android:hint="@string/school_name"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/grades"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:background="@drawable/edittext_round"
                android:hint="@string/grade"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/address"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:background="@drawable/edittext_round"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="20dp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="300dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/orange"
                android:fontFamily="@font/roboto"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_need"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "15sp"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>